Fix broken navbar search form alignment
Closes:

  https://wincent.com/issues/1688

Tested in both Safari and Firefox.

--- a/app/views/sass/display.sass
+++ b/app/views/sass/display.sass
@@ -212,8 +212,8 @@ a.mailto:after
 
 #navbar form
   position:         relative
-  top:              -15px
-  left:             60px
+  top:              -2px
+  left:             10px
   width:            200px
   display:          inline
   margin:           0em
